fix gallery for media query on tablets

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -331,5 +331,9 @@ Main {
         font-size: 100%;
         height:200px;
         }
+    #gallery {
+        width: 100%;
+        column-count: 2;
+        }
 
 }
